# highdeas

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Create Highdeas Shortcut.bat  Create Voice Memos Shortcut.bat  Create-HighdeasShortcut.ps1  README.md  Review Voice Memos.bat  Set Asana Token.bat  Set Notesnook Key.bat  pyproject.toml  run_highdeas.py  run_voicememo.py
.github/workflows/: merge-gate.yml
docs/: ios-app-handoff.md  mac-peer.md
ios/: resign.sh
ios/Highdeas/: CaptureModel.swift  ContentView.swift  HighdeasApp.swift  Info.plist  Player.swift  Recorder.swift  Uploader.swift
ios/Highdeas.xcodeproj/: project.pbxproj
ios/HighdeasKit/: Package.swift
mac/Highdeas.xcodeproj/: project.pbxproj
mac/HighdeasMac/: AppDelegate.swift  Engine.swift  main.swift
scripts/: authorize_google_docs.py  backfill_drive_subfolders.py
src/highdeas/: __init__.py  app.py  audio.py  drive_link.py  drive_write.py  hesitation.py  ingest.py  nonspeech.py  routers.py  service.py  sheet.py  singing.py  store.py  transcribe.py  update.py  upload.py  vocabulary.py  web.py  window_state.py
src/voicememo/: app.py  store.py  (+5 more)
tests/: audio_files.py  conftest.py  test_app.py  test_audio.py  test_authorize_google_docs.py  test_backfill_drive_subfolders.py  test_drive_link.py  test_drive_write.py  test_hesitation.py  test_ingest.py  test_nonspeech.py  test_routers.py  test_service.py  test_sheet.py  test_singing.py  test_store.py  test_transcribe.py  test_update.py  test_upload.py  test_vocabulary.py  test_web.py  test_window_state.py
tools/: make_icon.py  make_mac_app.sh
(+311 files in other folders)
